--- a/first/index.html
+++ b/first/index.html
@@ -453,21 +453,23 @@
                         <a class="next" href="/standard/"><span class="short">next </span><span class="long">post </span><i class="fa fa-angle-right"></i></a>
                         
                     </div>
-                </div>
-                <div id="disqus_thread"></div>
-<script>
-(function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = '//mindstuffs.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
+                    <script type="text/javascript">
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = '//http-mindstuffs-com.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+
+<div id="disqus_thread"></div>
+
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+     
+                </div>                           
             </div>
         </section>
-
         <footer>
     <div class="content">
         <span>&copy; Mindstuffs</span>
@@ -476,6 +478,6 @@
 </footer>
 
         <script src="/js/build/global.min.js"></script>
-        <script id="dsq-count-scr" src="//mindstuffs.disqus.com/count.js" async></script>
+        <script id="dsq-count-scr" src="//http-mindstuffs-com.disqus.com/count.js" async></script>
     </body>
 </html>
